FIX: Scrollbars styles

--- a/assets/css/06-components/_components.alliances.scss
+++ b/assets/css/06-components/_components.alliances.scss
@@ -34,24 +34,3 @@
     }
   }
 }
-
-* {
-  scrollbar-width: thin;
-  scrollbar-color: $gray transparent;
-}
-
-/* Works on Chrome/Edge/Safari */
-*::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: $gray;
-  border-radius: 20px;
-  border: 1px solid $gray;
-}
